--- a/src/renderer/App.global.css
+++ b/src/renderer/App.global.css
@@ -2,10 +2,15 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
+html {
+	height: 100vh;
+	width:100%;
+}
 body {
   position: relative;
   color: white;
-  height: 100vh;
+  height: 100%;
+	width: 100%;
   background: linear-gradient(
     200.96deg,
     #fedc2a -29.09%,
@@ -14,6 +19,7 @@ body {
   );
   font-family: sans-serif;
   overflow-y: hidden;
+	overflow-x: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -54,6 +60,8 @@ a:hover {
 
 .Hello {
   display: flex;
+	height: 100%;
+  width: 100%;
   justify-content: center;
   align-items: center;
   margin: 20px 0;
