--- a/src/renderer/index.ejs
+++ b/src/renderer/index.ejs
@@ -5,14 +5,6 @@
     <title>TerraTech Steam Mod Loader</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="Hello"></div>
   </body>
-  <script>
-    window.electron.ipcRenderer.once('ipc-example', (arg) => {
-      // eslint-disable-next-line no-console
-      console.log(arg);
-    });
-
-    window.electron.ipcRenderer.myPing();
-  </script>
 </html>
