--- a/src/renderer/App.global.css
+++ b/src/renderer/App.global.css
@@ -2,67 +2,70 @@
  * @NOTE: Prepend a `~` to css file paths that are in your node_modules
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
+
+@import '~antd/dist/antd.css';
+
 html {
 	height: 100vh;
-	width:100%;
+	width: 100%;
 }
 body {
-  position: relative;
-  color: white;
-  height: 100%;
+	position: relative;
+	color: white;
+	height: 100%;
 	width: 100%;
-  background: linear-gradient(
-    200.96deg,
-    #fedc2a -29.09%,
-    #dd5789 51.77%,
-    #7a2c9e 129.35%
-  );
-  font-family: sans-serif;
-  overflow-y: hidden;
+	background: linear-gradient(
+		200.96deg,
+		#fedc2a -29.09%,
+		#dd5789 51.77%,
+		#7a2c9e 129.35%
+	);
+	font-family: sans-serif;
+	overflow-y: hidden;
 	overflow-x: hidden;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 button {
-  background-color: white;
-  padding: 10px 20px;
-  border-radius: 10px;
-  border: none;
-  appearance: none;
-  font-size: 1.3rem;
-  box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
-    0px 18px 88px -4px rgba(24, 39, 75, 0.14);
-  transition: transform ease-in 0.1s;
-  cursor: pointer;
+	background-color: white;
+	padding: 10px 20px;
+	border-radius: 10px;
+	border: none;
+	appearance: none;
+	font-size: 1.3rem;
+	box-shadow: 0px 8px 28px -6px rgba(24, 39, 75, 0.12),
+		0px 18px 88px -4px rgba(24, 39, 75, 0.14);
+	transition: transform ease-in 0.1s;
+	cursor: pointer;
 }
 
 button:hover {
-  transform: scale(1.05);
+	transform: scale(1.05);
 }
 
 li {
-  list-style: none;
+	list-style: none;
 }
 
 a {
-  text-decoration: none;
-  height: fit-content;
-  width: fit-content;
-  margin: 10px;
+	text-decoration: none;
+	height: fit-content;
+	width: fit-content;
+	margin: 10px;
 }
 
 a:hover {
-  opacity: 1;
-  text-decoration: none;
+	opacity: 1;
+	text-decoration: none;
 }
 
 .Hello {
-  display: flex;
+	display: flex;
 	height: 100%;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
-  margin: 20px 0;
+	width: 100%;
+	justify-content: center;
+	align-items: center;
+	margin: 20px 0;
 }
