--- a/src/renderer/App.global.less
+++ b/src/renderer/App.global.less
@@ -3,7 +3,7 @@
  *        See https://github.com/webpack-contrib/sass-loader#imports
  */
 
-@import '~antd/dist/antd.css';
+@import '~antd/dist/antd.less';
 
 html {
 	height: 100vh;
