--- a/src/renderer/App.global.less
+++ b/src/renderer/App.global.less
@@ -65,8 +65,17 @@ a:hover {
 	min-width: 0;
 }
 
+.ant-form-item-label label {
+	color: @text-color-dark;
+	font-size: 16px;
+}
+
+#MenuBar li.ant-menu-item {
+	height: 40px;
+}
+
 .MenuBar {
-	background: @layout-footer-background !important;
+	background: black !important;
 }
 
 .Settings {
