Main table view settings, preliminary mod details panel

--- a/src/renderer/App.global.less
+++ b/src/renderer/App.global.less
@@ -137,3 +137,35 @@ a:hover {
 .ModDetailFooterPreview .ant-card-body {
 	padding: 0px;
 }
+
+.ModDetailInspect .ant-collapse-item .ant-collapse-content-box {
+	padding-top: 0px;
+	padding-bottom: 0px;
+	padding-left: 24px;
+	padding-right: 0px;
+}
+
+.ModDetailInspect .ant-collapse-item .ant-collapse-header {
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-left: 8px;
+}
+
+.ModDetailInspect .ant-descriptions-small .ant-descriptions-item-label {
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-left: 8px;
+	padding-right: 8px;
+}
+.ModDetailInspect .ant-descriptions-small .ant-descriptions-item-content {
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-left: 8px;
+	padding-right: 8px;
+}
+
+.ModDetailFooter .ant-page-header {
+	background-color: @layout-header-background;
+	padding-top: 4px;
+	padding-bottom: 4px;
+}
