Add view settings modal, mod details footer

--- a/src/renderer/App.global.less
+++ b/src/renderer/App.global.less
@@ -169,3 +169,13 @@ a:hover {
 	padding-top: 4px;
 	padding-bottom: 4px;
 }
+
+.ModDetailDependencies .ant-collapse-item .ant-collapse-content-box {
+	padding: 0px;
+}
+
+.ModDetailDependenceis .ant-collapse-item .ant-collapse-header {
+	padding-top: 4px;
+	padding-bottom: 4px;
+	padding-left: 8px;
+}
