Re-arrange collection settings modal

--- a/src/renderer/App.global.less
+++ b/src/renderer/App.global.less
@@ -179,3 +179,22 @@ a:hover {
 	padding-bottom: 4px;
 	padding-left: 8px;
 }
+
+.CollectionSettings .ant-form-item-control {
+	align-items: flex-end
+}
+
+.CollectionColumnSelection .ant-form-item {
+	margin-bottom: 4px;
+	margin-top: 4px;
+	margin-left: 4px;
+	padding-left: 12px;
+	padding-right: 12px;
+	border-top-width: 1px;
+	border-top-style: solid;
+	border-top-color: rgba(255, 255, 255, 0.12);
+}
+
+.CollectionColumnSelection .ant-form-item-label label {
+	font-size: 14px;
+}
