Add ability to specify additional custom args, edit logging

--- a/src/renderer/App.global.less
+++ b/src/renderer/App.global.less
@@ -198,3 +198,12 @@ a:hover {
 .CollectionColumnSelection .ant-form-item-label label {
 	font-size: 14px;
 }
+
+.CollectionSettings .MiscAppSettings {
+	padding-top: 10px;
+	padding-bottom: 10px;
+	margin-bottom: 20px;
+	border-right-style: solid;
+	border-right-width: 2px;
+	border-right-color: rgba(255, 255, 255, 0.12);
+}
