--- a/src/renderer/App.global.less
+++ b/src/renderer/App.global.less
@@ -207,3 +207,12 @@ a:hover {
 	border-right-width: 2px;
 	border-right-color: rgba(255, 255, 255, 0.12);
 }
+
+.ant-table.ant-table-small td.ant-table-cell.CollectionRowModType {
+	padding: 0px;
+}
+
+.ant-table.ant-table-small td.ant-table-cell.CollectionRowModName {
+	padding: 2px;
+	padding-right: 4px;
+}
